--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+Next:
+    * bugfix: Fix some typos and correct DE translations (PR #667)
 2.2.1: 2018-09-25
     * feature: Change DCLNavbarPlugin to show login option only if set (PR #665)
     * bugfix: Log opennebula errors and send proper message when vm terminate is not completed in the stipulated time (PR #648)
