use new copyright footers, use i8ln for it

--- a/ungleich_page/locale/de/LC_MESSAGES/django.po
+++ b/ungleich_page/locale/de/LC_MESSAGES/django.po
@@ -151,8 +151,8 @@ msgstr "oder"
 msgid "Submit"
 msgstr "Absenden"
 
-msgid "Copyright © ungleich GmbH "
-msgstr "Copyright © ungleich GmbH"
+msgid "Copyright © ungleich glarus ag"
+msgstr "Copyright © ungleich glarus ag"
 
 msgid "ungleich Home"
 msgstr "ungleich Home"
