--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+2.4: 2018-10-18
+    * #5681: [hosting,dcl] Allow admin to lower minimum RAM to 512 MB (PR #672)
 2.3.1: 2018-10-17
     * bugfix: [hosting, dcl] Show VAT percent rounded to 2 decimal places in the order confirmation page (PR #673)
 2.3: 2018-10-08
